ajout tests session service